加入二维码合成、定时任务计划功能

--- a/qn_web_api/conf/app.conf
+++ b/qn_web_api/conf/app.conf
@@ -1,6 +1,7 @@
 appname = qn_web_api
 httpport = 8001
 runmode = dev
+sessionon = true
 #接收body值
 copyrequestbody = true
 #忽略路由大小写
@@ -25,7 +26,7 @@ db_password = "$qpc123456$"
 #mysql主数据库
 [database_mysql]
 db_type="mysql"
-db_server="122.114.213.101"
+db_server="114.116.229.225"
 db_port="3306" 
 db_database = "qn_cms"
 db_user = "root"
@@ -36,9 +37,8 @@ db_prefix = ""
 account="cf_cf_limengen"
 password="47523312cff8e19579c0115dff06bf40"
 [server_path]
-PrefixUrl ="http://127.0.0.1:10101/"
-QrCodeSavePath ="qrcode/"
+FontPath="fonts/zh/"
+PrefixUrl="http://114.116.229.225:809/"
+QrCodeSavePath="qrcode/"
 QrCodebgPic="upload/qrcode/tg_bg.jpeg"
-RuntimeRootPath ="upload/qrcode/"
-
-
+RuntimeRootPath="upload/qrcode/"
